fix text input error messages being covered

--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -56,6 +56,7 @@
   position: relative;
   text-align: left;
   font-family: $hui-font-family;
+  z-index: 0;
 }
 
 %hui-text-input--readOnly {
